; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperfbsd.c_sysctl_bless.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperfbsd.c_sysctl_bless.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysctl_req = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sysctl_req*)* @sysctl_bless to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sysctl_bless(%struct.sysctl_req* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sysctl_req*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.sysctl_req* %0, %struct.sysctl_req** %3, align 8
  %6 = call i32 (...) @ktrace_get_owning_pid()
  store i32 %6, i32* %4, align 4
  %7 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @sysctl_io_number(%struct.sysctl_req* %7, i32 %8, i32 4, i32* %4, i32* null)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %1
  %13 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %14 = getelementptr inbounds %struct.sysctl_req, %struct.sysctl_req* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %12, %1
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* %2, align 4
  br label %22

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @ktrace_set_owning_pid(i32 %20)
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %17
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @ktrace_get_owning_pid(...) #1

declare dso_local i32 @sysctl_io_number(%struct.sysctl_req*, i32, i32, i32*, i32*) #1

declare dso_local i32 @ktrace_set_owning_pid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
